--- a/clinics.html
+++ b/clinics.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthcare Marketing Agency | HIPAA-Compliant Patient Acquisition | Luvid Agency</title>
+    <link rel="icon" type="image/jpeg" href="/logo.jpeg">
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-31PH0CDNPY"></script>
