--- a/ecommerce.html
+++ b/ecommerce.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-commerce Marketing Agency | Boost Sales & Reduce Cart Abandonment | Luvid Agency</title>
+    <link rel="icon" type="image/jpeg" href="/logo.jpeg">
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-31PH0CDNPY"></script>
